Primera prueba funcional por consola sin bbdd